tests/snapshots/svg_snapshots__histogram.snap
---
source: tests/svg_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="900" viewBox="0 0 1200 900">
<rect x="0" y="0" width="1200" height="900" fill="white"/>
<defs>
  <clipPath id="cp0"><rect x="95.00" y="125.00" width="1090.00" height="710.00"/></clipPath>
  <clipPath id="cp1"><rect x="15.00" y="15.00" width="1170.00" height="110.00"/></clipPath>
  <clipPath id="cp2"><rect x="71.00" y="835.00" width="1138.00" height="50.00"/></clipPath>
  <clipPath id="cp3"><rect x="-9.00" y="113.00" width="104.00" height="734.00"/></clipPath>
</defs>
<g clip-path="url(#cp0)">
  <rect x="191.61" y="759.70" width="57.44" height="43.03" fill="rgba(89,140,191,1.0000)"/>
  <rect x="249.05" y="802.73" width="57.44" height="0.00" fill="rgba(89,140,191,1.0000)"/>
  <rect x="306.49" y="673.64" width="57.44" height="129.09" fill="rgba(89,140,191,1.0000)"/>
  <rect x="363.93" y="587.58" width="57.44" height="215.15" fill="rgba(89,140,191,1.0000)"/>
  <rect x="421.37" y="587.58" width="57.44" height="215.15" fill="rgba(89,140,191,1.0000)"/>
  <rect x="478.81" y="157.27" width="57.44" height="645.45" fill="rgba(89,140,191,1.0000)"/>
  <rect x="536.25" y="286.36" width="57.44" height="516.36" fill="rgba(89,140,191,1.0000)"/>
  <rect x="593.69" y="243.33" width="57.44" height="559.39" fill="rgba(89,140,191,1.0000)"/>
  <rect x="651.13" y="329.39" width="57.44" height="473.33" fill="rgba(89,140,191,1.0000)"/>
  <rect x="708.57" y="458.48" width="57.44" height="344.24" fill="rgba(89,140,191,1.0000)"/>
  <rect x="766.01" y="501.52" width="57.44" height="301.21" fill="rgba(89,140,191,1.0000)"/>
  <rect x="823.45" y="372.42" width="57.44" height="430.30" fill="rgba(89,140,191,1.0000)"/>
  <rect x="880.89" y="587.58" width="57.44" height="215.15" fill="rgba(89,140,191,1.0000)"/>
  <rect x="938.33" y="716.67" width="57.44" height="86.06" fill="rgba(89,140,191,1.0000)"/>
  <rect x="995.77" y="673.64" width="57.44" height="129.09" fill="rgba(89,140,191,1.0000)"/>
</g>
<g clip-path="url(#cp1)">
  <text x="600.00" y="70.00" font-size="48" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="600.00" dy="0.0">Value Distribution</tspan>
  </text>
</g>
<g clip-path="url(#cp2)">
  <rect x="95.00" y="834.50" width="1090.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="144.05" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="144.55" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">20</text>
  <rect x="391.77" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="392.27" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">40</text>
  <rect x="639.50" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="640.00" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">60</text>
  <rect x="887.23" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="887.73" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">80</text>
  <rect x="1134.95" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="1135.45" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">100</text>
  <text x="640.00" y="860.00" font-size="36" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="640.00" dy="0.0">Value</tspan>
  </text>
</g>
<g clip-path="url(#cp3)">
  <rect x="94.50" y="125.00" width="1.00" height="710.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="92.00" y="802.23" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="802.73" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">0</text>
  <rect x="92.00" y="587.08" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="587.58" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">5</text>
  <rect x="92.00" y="371.92" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="372.42" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">10</text>
  <rect x="92.00" y="156.77" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="157.27" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">15</text>
  <text x="35.00" y="480.00" font-size="36" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000" transform="rotate(-90,35.00,480.00)">Count</text>
</g>
</svg>
