tests/snapshots/svg_snapshots__histogram_fill.snap
---
source: tests/svg_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="900" viewBox="0 0 1200 900">
<rect x="0" y="0" width="1200" height="900" fill="white"/>
<defs>
  <clipPath id="cp0"><rect x="95.00" y="125.00" width="874.00" height="710.00"/></clipPath>
  <clipPath id="cp1"><rect x="985.00" y="125.00" width="200.00" height="710.00"/></clipPath>
  <clipPath id="cp2"><rect x="15.00" y="15.00" width="1170.00" height="110.00"/></clipPath>
  <clipPath id="cp3"><rect x="71.00" y="835.00" width="922.00" height="50.00"/></clipPath>
  <clipPath id="cp4"><rect x="-9.00" y="113.00" width="104.00" height="734.00"/></clipPath>
</defs>
<g clip-path="url(#cp0)">
  <rect x="172.47" y="759.70" width="46.06" height="43.03" fill="rgba(215,66,66,1.0000)"/>
  <rect x="218.53" y="802.73" width="46.06" height="0.00" fill="rgba(215,66,66,1.0000)"/>
  <rect x="264.58" y="673.64" width="46.06" height="129.09" fill="rgba(215,66,66,1.0000)"/>
  <rect x="310.64" y="587.58" width="46.06" height="215.15" fill="rgba(215,66,66,1.0000)"/>
  <rect x="356.70" y="587.58" width="46.06" height="215.15" fill="rgba(215,66,66,1.0000)"/>
  <rect x="402.75" y="200.30" width="46.06" height="602.42" fill="rgba(215,66,66,1.0000)"/>
  <rect x="448.81" y="372.42" width="46.06" height="430.30" fill="rgba(215,66,66,1.0000)"/>
  <rect x="494.87" y="372.42" width="46.06" height="430.30" fill="rgba(215,66,66,1.0000)"/>
  <rect x="540.93" y="716.67" width="46.06" height="86.06" fill="rgba(215,66,66,1.0000)"/>
  <rect x="586.98" y="802.73" width="46.06" height="0.00" fill="rgba(215,66,66,1.0000)"/>
  <rect x="633.04" y="802.73" width="46.06" height="0.00" fill="rgba(215,66,66,1.0000)"/>
  <rect x="679.10" y="802.73" width="46.06" height="0.00" fill="rgba(215,66,66,1.0000)"/>
  <rect x="725.15" y="802.73" width="46.06" height="0.00" fill="rgba(215,66,66,1.0000)"/>
  <rect x="771.21" y="802.73" width="46.06" height="0.00" fill="rgba(215,66,66,1.0000)"/>
  <rect x="817.27" y="802.73" width="46.06" height="0.00" fill="rgba(215,66,66,1.0000)"/>
  <rect x="172.47" y="759.70" width="46.06" height="0.00" fill="rgba(66,215,215,1.0000)"/>
  <rect x="218.53" y="802.73" width="46.06" height="0.00" fill="rgba(66,215,215,1.0000)"/>
  <rect x="264.58" y="673.64" width="46.06" height="0.00" fill="rgba(66,215,215,1.0000)"/>
  <rect x="310.64" y="587.58" width="46.06" height="0.00" fill="rgba(66,215,215,1.0000)"/>
  <rect x="356.70" y="587.58" width="46.06" height="0.00" fill="rgba(66,215,215,1.0000)"/>
  <rect x="402.75" y="157.27" width="46.06" height="43.03" fill="rgba(66,215,215,1.0000)"/>
  <rect x="448.81" y="286.36" width="46.06" height="86.06" fill="rgba(66,215,215,1.0000)"/>
  <rect x="494.87" y="243.33" width="46.06" height="129.09" fill="rgba(66,215,215,1.0000)"/>
  <rect x="540.93" y="329.39" width="46.06" height="387.27" fill="rgba(66,215,215,1.0000)"/>
  <rect x="586.98" y="458.48" width="46.06" height="344.24" fill="rgba(66,215,215,1.0000)"/>
  <rect x="633.04" y="501.52" width="46.06" height="301.21" fill="rgba(66,215,215,1.0000)"/>
  <rect x="679.10" y="372.42" width="46.06" height="430.30" fill="rgba(66,215,215,1.0000)"/>
  <rect x="725.15" y="587.58" width="46.06" height="215.15" fill="rgba(66,215,215,1.0000)"/>
  <rect x="771.21" y="716.67" width="46.06" height="86.06" fill="rgba(66,215,215,1.0000)"/>
  <rect x="817.27" y="673.64" width="46.06" height="129.09" fill="rgba(66,215,215,1.0000)"/>
</g>
<g clip-path="url(#cp1)">
  <rect x="998.00" y="224.50" width="14.00" height="14.00" fill="rgba(215,66,66,1.0000)"/>
  <text x="1029.00" y="231.50" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">A</text>
  <rect x="998.00" y="288.40" width="14.00" height="14.00" fill="rgba(66,215,215,1.0000)"/>
  <text x="1029.00" y="295.40" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">B</text>
</g>
<g clip-path="url(#cp2)">
  <text x="600.00" y="70.00" font-size="48" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="600.00" dy="0.0">Value Distribution by Group (Stacked)</tspan>
  </text>
</g>
<g clip-path="url(#cp3)">
  <rect x="95.00" y="834.50" width="874.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="134.23" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="134.73" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">20</text>
  <rect x="332.86" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="333.36" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">40</text>
  <rect x="531.50" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="532.00" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">60</text>
  <rect x="730.14" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="730.64" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">80</text>
  <rect x="928.77" y="832.00" width="1.00" height="6.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="929.27" y="840.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">100</text>
  <text x="532.00" y="860.00" font-size="36" font-family="sans-serif" text-anchor="middle" dominant-baseline="hanging" fill="#000000" fill-opacity="1.000">
    <tspan x="532.00" dy="0.0">Value</tspan>
  </text>
</g>
<g clip-path="url(#cp4)">
  <rect x="94.50" y="125.00" width="1.00" height="710.00" fill="rgba(179,179,179,1.0000)"/>
  <rect x="92.00" y="802.23" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="802.73" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">0</text>
  <rect x="92.00" y="587.08" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="587.58" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">5</text>
  <rect x="92.00" y="371.92" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="372.42" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">10</text>
  <rect x="92.00" y="156.77" width="6.00" height="1.00" fill="rgba(179,179,179,1.0000)"/>
  <text x="83.00" y="157.27" font-size="24" font-family="sans-serif" text-anchor="end" dominant-baseline="central" fill="#000000" fill-opacity="1.000">15</text>
  <text x="35.00" y="480.00" font-size="36" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000" transform="rotate(-90,35.00,480.00)">Count</text>
</g>
</svg>
