tests/snapshots/svg_snapshots__pie.snap
---
source: tests/svg_snapshots.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" width="1200" height="900" viewBox="0 0 1200 900">
<rect x="0" y="0" width="1200" height="900" fill="white"/>
<defs>
  <clipPath id="cp0"><rect x="112.00" y="125.00" width="760.00" height="760.00"/></clipPath>
  <clipPath id="cp1"><rect x="985.00" y="125.00" width="200.00" height="760.00"/></clipPath>
</defs>
<g clip-path="url(#cp0)">
  <path d="M 492.00 505.00 L 799.19 405.19 A 323.00 323.00 0 0 0 492.00 182.00 Z" fill="rgba(215,66,66,1.0000)"/>
  <path d="M 492.00 505.00 L 681.85 766.31 A 323.00 323.00 0 0 0 799.19 405.19 Z" fill="rgba(185,215,66,1.0000)"/>
  <path d="M 492.00 505.00 L 302.15 766.31 A 323.00 323.00 0 0 0 681.85 766.31 Z" fill="rgba(66,215,125,1.0000)"/>
  <path d="M 492.00 505.00 L 184.81 405.19 A 323.00 323.00 0 0 0 302.15 766.31 Z" fill="rgba(66,125,215,1.0000)"/>
  <path d="M 492.00 505.00 L 492.00 182.00 A 323.00 323.00 0 0 0 184.81 405.19 Z" fill="rgba(185,66,215,1.0000)"/>
  <polyline points="653.50,505.00 652.72,489.17 650.40,473.49 646.55,458.12 641.21,443.20 634.43,428.87 626.28,415.28 616.84,402.55 606.20,390.80 594.45,380.16 581.72,370.72 568.13,362.57 553.80,355.79 538.88,350.45 523.51,346.60 507.83,344.28 492.00,343.50 476.17,344.28 460.49,346.60 445.12,350.45 430.20,355.79 415.87,362.57 402.28,370.72 389.55,380.16 377.80,390.80 367.16,402.55 357.72,415.28 349.57,428.87 342.79,443.20 337.45,458.12 333.60,473.49 331.28,489.17 330.50,505.00 331.28,520.83 333.60,536.51 337.45,551.88 342.79,566.80 349.57,581.13 357.72,594.72 367.16,607.45 377.80,619.20 389.55,629.84 402.28,639.28 415.87,647.43 430.20,654.21 445.12,659.55 460.49,663.40 476.17,665.72 492.00,666.50 507.83,665.72 523.51,663.40 538.88,659.55 553.80,654.21 568.13,647.43 581.72,639.28 594.45,629.84 606.20,619.20 616.84,607.45 626.28,594.72 634.43,581.13 641.21,566.80 646.55,551.88 650.40,536.51 652.72,520.83 653.50,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="506.68,505.00 506.61,503.56 506.40,502.14 506.05,500.74 505.56,499.38 504.95,498.08 504.21,496.84 503.35,495.69 502.38,494.62 501.31,493.65 500.16,492.79 498.92,492.05 497.62,491.44 496.26,490.95 494.86,490.60 493.44,490.39 492.00,490.32 490.56,490.39 489.14,490.60 487.74,490.95 486.38,491.44 485.08,492.05 483.84,492.79 482.69,493.65 481.62,494.62 480.65,495.69 479.79,496.84 479.05,498.08 478.44,499.38 477.95,500.74 477.60,502.14 477.39,503.56 477.32,505.00 477.39,506.44 477.60,507.86 477.95,509.26 478.44,510.62 479.05,511.92 479.79,513.16 480.65,514.31 481.62,515.38 482.69,516.35 483.84,517.21 485.08,517.95 486.38,518.56 487.74,519.05 489.14,519.40 490.56,519.61 492.00,519.68 493.44,519.61 494.86,519.40 496.26,519.05 497.62,518.56 498.92,517.95 500.16,517.21 501.31,516.35 502.38,515.38 503.35,514.31 504.21,513.16 504.95,511.92 505.56,510.62 506.05,509.26 506.40,507.86 506.61,506.44 506.68,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="580.09,505.00 579.67,496.37 578.40,487.81 576.30,479.43 573.39,471.29 569.69,463.47 565.24,456.06 560.10,449.12 554.29,442.71 547.88,436.90 540.94,431.76 533.53,427.31 525.71,423.61 517.57,420.70 509.19,418.60 500.63,417.33 492.00,416.91 483.37,417.33 474.81,418.60 466.43,420.70 458.29,423.61 450.47,427.31 443.06,431.76 436.12,436.90 429.71,442.71 423.90,449.12 418.76,456.06 414.31,463.47 410.61,471.29 407.70,479.43 405.60,487.81 404.33,496.37 403.91,505.00 404.33,513.63 405.60,522.19 407.70,530.57 410.61,538.71 414.31,546.53 418.76,553.94 423.90,560.88 429.71,567.29 436.12,573.10 443.06,578.24 450.47,582.69 458.29,586.39 466.43,589.30 474.81,591.40 483.37,592.67 492.00,593.09 500.63,592.67 509.19,591.40 517.57,589.30 525.71,586.39 533.53,582.69 540.94,578.24 547.88,573.10 554.29,567.29 560.10,560.88 565.24,553.94 569.69,546.53 573.39,538.71 576.30,530.57 578.40,522.19 579.67,513.63 580.09,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="653.50,505.00 652.72,489.17 650.40,473.49 646.55,458.12 641.21,443.20 634.43,428.87 626.28,415.28 616.84,402.55 606.20,390.80 594.45,380.16 581.72,370.72 568.13,362.57 553.80,355.79 538.88,350.45 523.51,346.60 507.83,344.28 492.00,343.50 476.17,344.28 460.49,346.60 445.12,350.45 430.20,355.79 415.87,362.57 402.28,370.72 389.55,380.16 377.80,390.80 367.16,402.55 357.72,415.28 349.57,428.87 342.79,443.20 337.45,458.12 333.60,473.49 331.28,489.17 330.50,505.00 331.28,520.83 333.60,536.51 337.45,551.88 342.79,566.80 349.57,581.13 357.72,594.72 367.16,607.45 377.80,619.20 389.55,629.84 402.28,639.28 415.87,647.43 430.20,654.21 445.12,659.55 460.49,663.40 476.17,665.72 492.00,666.50 507.83,665.72 523.51,663.40 538.88,659.55 553.80,654.21 568.13,647.43 581.72,639.28 594.45,629.84 606.20,619.20 616.84,607.45 626.28,594.72 634.43,581.13 641.21,566.80 646.55,551.88 650.40,536.51 652.72,520.83 653.50,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="726.91,505.00 725.78,481.97 722.40,459.17 716.79,436.81 709.03,415.10 699.17,394.26 687.32,374.49 673.59,355.98 658.11,338.89 641.02,323.41 622.51,309.68 602.74,297.83 581.90,287.97 560.19,280.21 537.83,274.60 515.03,271.22 492.00,270.09 468.97,271.22 446.17,274.60 423.81,280.21 402.10,287.97 381.26,297.83 361.49,309.68 342.98,323.41 325.89,338.89 310.41,355.98 296.68,374.49 284.83,394.26 274.97,415.10 267.21,436.81 261.60,459.17 258.22,481.97 257.09,505.00 258.22,528.03 261.60,550.83 267.21,573.19 274.97,594.90 284.83,615.74 296.68,635.51 310.41,654.02 325.89,671.11 342.98,686.59 361.49,700.32 381.26,712.17 402.10,722.03 423.81,729.79 446.17,735.40 468.97,738.78 492.00,739.91 515.03,738.78 537.83,735.40 560.19,729.79 581.90,722.03 602.74,712.17 622.51,700.32 641.02,686.59 658.11,671.11 673.59,654.02 687.32,635.51 699.17,615.74 709.03,594.90 716.79,573.19 722.40,550.83 725.78,528.03 726.91,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="800.32,505.00 798.83,474.78 794.39,444.85 787.04,415.50 776.85,387.01 763.91,359.66 748.36,333.71 730.33,309.40 710.01,286.99 687.59,266.67 663.29,248.64 637.34,233.09 609.99,220.15 581.50,209.96 552.15,202.61 522.22,198.17 492.00,196.68 461.78,198.17 431.85,202.61 402.50,209.96 374.01,220.15 346.66,233.09 320.71,248.64 296.40,266.67 273.99,286.99 253.67,309.40 235.64,333.71 220.09,359.66 207.15,387.01 196.96,415.50 189.61,444.85 185.17,474.78 183.68,505.00 185.17,535.22 189.61,565.15 196.96,594.50 207.15,622.99 220.09,650.34 235.64,676.29 253.67,700.60 273.99,723.01 296.40,743.33 320.71,761.36 346.66,776.91 374.01,789.85 402.50,800.04 431.85,807.39 461.78,811.83 492.00,813.32 522.22,811.83 552.15,807.39 581.50,800.04 609.99,789.85 637.34,776.91 663.29,761.36 687.60,743.33 710.01,723.01 730.33,700.59 748.36,676.29 763.91,650.34 776.85,622.99 787.04,594.50 794.39,565.15 798.83,535.22 800.32,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="815.00,505.00 813.44,473.34 808.79,441.99 801.09,411.24 790.41,381.39 776.86,352.74 760.56,325.55 741.68,300.09 720.40,276.60 696.91,255.32 671.45,236.44 644.26,220.14 615.61,206.59 585.76,195.91 555.01,188.21 523.66,183.56 492.00,182.00 460.34,183.56 428.99,188.21 398.24,195.91 368.39,206.59 339.74,220.14 312.55,236.44 287.09,255.32 263.60,276.60 242.32,300.09 223.44,325.55 207.14,352.74 193.59,381.39 182.91,411.24 175.21,441.99 170.56,473.34 169.00,505.00 170.56,536.66 175.21,568.01 182.91,598.76 193.59,628.61 207.14,657.26 223.44,684.45 242.32,709.91 263.60,733.40 287.09,754.68 312.55,773.56 339.74,789.86 368.39,803.41 398.24,814.09 428.99,821.79 460.34,826.44 492.00,828.00 523.66,826.44 555.01,821.79 585.76,814.09 615.61,803.41 644.26,789.86 671.45,773.56 696.91,754.68 720.40,733.40 741.68,709.91 760.56,684.45 776.86,657.26 790.41,628.61 801.09,598.76 808.79,568.01 813.44,536.66 815.00,505.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="492.00,505.00 492.00,828.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <polyline points="492.00,505.00 681.85,243.69" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="704.19" y="212.94" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Apple</text>
  <polyline points="492.00,505.00 799.19,604.81" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="835.33" y="616.56" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Banana</text>
  <polyline points="492.00,505.00 492.00,828.00" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="492.00" y="866.00" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Cherry</text>
  <polyline points="492.00,505.00 184.81,604.81" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="148.67" y="616.56" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Date</text>
  <polyline points="492.00,505.00 302.15,243.69" stroke="rgba(217,217,217,1.0000)" stroke-width="1.00" fill="none" stroke-linejoin="miter"/>
  <text x="279.81" y="212.94" font-size="24" font-family="sans-serif" text-anchor="middle" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Elderberry</text>
</g>
<g clip-path="url(#cp1)">
  <rect x="998.00" y="232.00" width="14.00" height="14.00" fill="rgba(215,66,66,1.0000)"/>
  <text x="1029.00" y="239.00" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Apple</text>
  <rect x="998.00" y="300.40" width="14.00" height="14.00" fill="rgba(185,215,66,1.0000)"/>
  <text x="1029.00" y="307.40" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Banana</text>
  <rect x="998.00" y="368.80" width="14.00" height="14.00" fill="rgba(66,215,125,1.0000)"/>
  <text x="1029.00" y="375.80" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Cherry</text>
  <rect x="998.00" y="437.20" width="14.00" height="14.00" fill="rgba(66,125,215,1.0000)"/>
  <text x="1029.00" y="444.20" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Date</text>
  <rect x="998.00" y="505.60" width="14.00" height="14.00" fill="rgba(185,66,215,1.0000)"/>
  <text x="1029.00" y="512.60" font-size="32" font-family="sans-serif" text-anchor="start" dominant-baseline="central" fill="#000000" fill-opacity="1.000">Elderberry</text>
</g>
</svg>
